Add github request parallelism